--- a/desktop/index.html
+++ b/desktop/index.html
@@ -5,7 +5,10 @@
     <title>Crimson Calendar</title>
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' http://localhost:5173; style-src 'self' 'unsafe-inline'; connect-src 'self' http://localhost:5173"
+      content="default-src 'self';
+               script-src 'self' 'unsafe-inline' http://localhost:5173 http://127.0.0.1:5173;
+               style-src 'self' 'unsafe-inline';
+               connect-src 'self' http://localhost:5173 http://127.0.0.1:5173 http://localhost:3001 http://127.0.0.1:3001;"
     />
   </head>
   <body>
