--- a/desktop/index.html
+++ b/desktop/index.html
@@ -8,7 +8,13 @@
       content="default-src 'self';
                script-src 'self' 'unsafe-inline' http://localhost:5173 http://127.0.0.1:5173;
                style-src 'self' 'unsafe-inline';
-               connect-src 'self' http://localhost:5173 http://127.0.0.1:5173 http://localhost:3001 http://127.0.0.1:3001;"
+               connect-src 'self'
+                 http://localhost:5173
+                 http://127.0.0.1:5173
+                 ws://localhost:5173
+                 ws://127.0.0.1:5173
+                 http://localhost:3001
+                 http://127.0.0.1:3001;"
     />
   </head>
   <body>
@@ -16,5 +22,3 @@
     <script type="module" src="/src/renderer.tsx"></script>
   </body>
 </html>
-
-//we should make this run on edge?
